Fix: use root to read logcat on Xiaomi